--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Ibarra-Ecuador·
                         <a href="mailto:christianmarcelog@gmail.com">christianmarcelog@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Really good at solving problems, valuable experience as Sys Admin and Cloud Engineer, strong experience builds up reliable infrastructure on-premises and cloud. Teamwork, Positive attitude, strong work ethic, likes to teach and learn every day</p>
+                    <p class="lead mb-5">Really good at solving problems, valuable experience as Sys Admin and Cloud Engineer, strong experience build up reliable infrastructure on-premises and cloud. Teamwork, Positive attitude, strong work ethic, Enjoy to teach and learn every day</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/marcelo-guerrero-760413125"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/croguerrero"><i class="fab fa-github"></i></a>
@@ -98,7 +98,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Tech Support</h3>
                             <div class="subheading mb-3">Saitel S.A</div>
-                            <p>Responsible for the complete infrastructure and Technical Suppor.</p>
+                            <p>Responsible for the complete infrastructure and Technical Support.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2012 - 2013</span></div>
                     </div>
