--- a/index.html
+++ b/index.html
@@ -111,10 +111,17 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Universidad Tecnica del Norte - Ecuador</h3>
-                            <div class="subheading mb-3">Bachelor of Electronic and Networking</div>
+                            <h3 class="mb-0">Courses, Bootcamps, Degree </h3>
+                            <div class="subheading mb-3">Networking,Sysadmin, DevOps, Cloud Computing </div>
                             <div>Networking </div>
-                            <p>REGISTRO: 1015-12-1103261</p>
+                            <p>- Implementing a Full CI/CD Pipeline | A Cloud Guru | 2021
+                               - Cloud Engineering Training | Google Qwiklabs | 2021
+                               - Google Professional Cloud Architect Exam Preparation | CLOUD ACADEMY | 2021
+                               - Google Associate Cloud Engineer Exam Preparation | CLOUD ACADEMY | 2021
+                               - Google Kubernetes Engine (GKE): Beginner to Pro | A Cloud Guru | 2021
+                               - DevOps Masterclass: Terraform Jenkins Kubernetes Ansible | Udemy | 2021
+                               - Self-Taught on Networking, Linux, Security, DevOps, Cloud Computing Courses | Online | 2012 - present
+                               - Engineering degree in Electronic and Networking | UTN(Ecuador) | 2012</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2007 - 2012</span></div>
                     </div>
