--- a/index.html
+++ b/index.html
@@ -113,17 +113,17 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Courses, Bootcamps, Degree </h3>
                             <div class="subheading mb-3">Networking,Sysadmin, DevOps, Cloud Computing </div>
-                            <div>Networking </div>
-                            <p>- Implementing a Full CI/CD Pipeline | A Cloud Guru | 2021
-                               - Cloud Engineering Training | Google Qwiklabs | 2021
-                               - Google Professional Cloud Architect Exam Preparation | CLOUD ACADEMY | 2021
-                               - Google Associate Cloud Engineer Exam Preparation | CLOUD ACADEMY | 2021
-                               - Google Kubernetes Engine (GKE): Beginner to Pro | A Cloud Guru | 2021
-                               - DevOps Masterclass: Terraform Jenkins Kubernetes Ansible | Udemy | 2021
-                               - Self-Taught on Networking, Linux, Security, DevOps, Cloud Computing Courses | Online | 2012 - present
-                               - Engineering degree in Electronic and Networking | UTN(Ecuador) | 2012</p>
+                            <div>--------Networking-------- </div>
+                            <p>- Implementing a Full CI/CD Pipeline | A Cloud Guru | 2021</p>
+                            <p>  - Cloud Engineering Training | Google Qwiklabs | 2021 </p>
+                            <p>  - Google Professional Cloud Architect Exam Preparation | CLOUD ACADEMY | 2021 </p>
+                            <p>  - Google Associate Cloud Engineer Exam Preparation | CLOUD ACADEMY | 2021  </p>
+                            <p>  - Google Kubernetes Engine (GKE): Beginner to Pro | A Cloud Guru | 2021    </p>
+                            <p>  - DevOps Masterclass: Terraform Jenkins Kubernetes Ansible | Udemy | 2021  </p>
+                            <p>  - Self-Taught on Networking, Linux, Security, DevOps, Cloud Computing Courses | Online | 2012 - present    </p>
+                            <p>   - Engineering degree in Electronic and Networking | UTN(Ecuador) | 2012</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2007 - 2012</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">2007 - at present</span></div>
                     </div>
                 </div>
             </section>
