--- a/index.html
+++ b/index.html
@@ -65,12 +65,21 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">SysAdmin </h3>
                             <div class="subheading mb-3">Coordinación Zonal 9 Salud – MSP </div>
-                            <p> • Sysadmin manager on health service public MSP.
-                                • Worked on supervising infrastructure in 9 Hospital and 150 affiliates on Quito City.
-                                ● Helped design and developed news services on VMware, Web Servers, Edge Security, Data Centers and Cloud Computing.
-                                ● Responsible for the company infrastructure (firewalls, webservers, mail servers, networking)
-                                ● Technical Support
-                                ● Migrated infrastructure on-premises to cloud providers</p>
+                            <p> •
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
+                                    Sysadmin manager on health service public MSP.</li> 
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
+                                    Worked on supervising infrastructure in 9 Hospital and 150 affiliates on Quito City.</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
+                                    Helped design and developed news services on VMware, Web Servers, Edge Security, Data Centers and Cloud Computing.</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
+                                    Responsible for the company infrastructure (firewalls, webservers, mail servers, networking)</li> 
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
+                                    Technical Support</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
+                                    Migrated infrastructure on-premises to cloud providers</li>
+                                
+                                </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2014 - 2021</span></div>
                     </div>
@@ -78,10 +87,15 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">DevOps, Cloud Engineer Consultant</h3>
                             <div class="subheading mb-3">Slope IT</div>
-                            <p>Freelance
-                                • Responsible for the complete infrastructure and Technical Support
-                                • Supporting and Consultant on Design Tech Project
-                                • Building up pipelines, set up backend infrastructure on GCP and AWS to startups.</p>
+                            <p>Freelance, Consultant
+                           <li><span class="fa-li"><i class="fas fa-check"></i></span> 
+                              Responsible for the complete infrastructure and Technical Support</li> 
+                          <li><span class="fa-li"><i class="fas fa-check"></i></span>
+                              Supporting and Consultant on Design Tech Project</li>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>
+                              Building up pipelines, set up backend infrastructure on GCP and AWS to startups</li>                                         
+                                
+                           </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2021 - At present</span></div>
                     </div>
@@ -113,8 +127,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Courses, Bootcamps, Degree </h3>
                             <div class="subheading mb-3">Networking,Sysadmin, DevOps, Cloud Computing </div>
-                            <div>--------Networking-------- </div>
-                            <p>- Implementing a Full CI/CD Pipeline | A Cloud Guru | 2021</p>
+                            <div> </div>
+                            <p> - Implementing a Full CI/CD Pipeline | A Cloud Guru | 2021</p>
                             <p>  - Cloud Engineering Training | Google Qwiklabs | 2021 </p>
                             <p>  - Google Professional Cloud Architect Exam Preparation | CLOUD ACADEMY | 2021 </p>
                             <p>  - Google Associate Cloud Engineer Exam Preparation | CLOUD ACADEMY | 2021  </p>
