--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">SysAdmin </h3>
                             <div class="subheading mb-3">Coordinación Zonal 9 Salud – MSP </div>
-                            <p> •
+                            <p> 
                                 <li><span class="fa-li"><i class="fas fa-check"></i></span>
                                     Sysadmin manager on health service public MSP.</li> 
                                 <li><span class="fa-li"><i class="fas fa-check"></i></span>
@@ -87,7 +87,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">DevOps, Cloud Engineer Consultant</h3>
                             <div class="subheading mb-3">Slope IT</div>
-                            <p>Freelance, Consultant
+                            <p>
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>
+                                Freelance, Consultant</li> 
                            <li><span class="fa-li"><i class="fas fa-check"></i></span> 
                               Responsible for the complete infrastructure and Technical Support</li> 
                           <li><span class="fa-li"><i class="fas fa-check"></i></span>
@@ -104,7 +106,7 @@
                             <h3 class="mb-0">SysAdmin</h3>
                             <div class="subheading mb-3">Fabrica Imbabura</div>
                             <p>Sysadmin manager.
-                                • Responsible for the complete infrastructure and Technical Support (Firewalls, webservers, mail servers, networking)..</p>
+                            Responsible for the complete infrastructure and Technical Support (Firewalls, webservers, mail servers, networking)..</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2013 -  2014</span></div>
                     </div>
@@ -135,7 +137,7 @@
                             <p>  - Google Kubernetes Engine (GKE): Beginner to Pro | A Cloud Guru | 2021    </p>
                             <p>  - DevOps Masterclass: Terraform Jenkins Kubernetes Ansible | Udemy | 2021  </p>
                             <p>  - Self-Taught on Networking, Linux, Security, DevOps, Cloud Computing Courses | Online | 2012 - present    </p>
-                            <p>   - Engineering degree in Electronic and Networking | UTN(Ecuador) | 2012</p>
+                            <p>  - Engineering degree in Electronic and Networking | UTN(Ecuador) | 2012</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2007 - at present</span></div>
                     </div>
