--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <li><span class="fa-li"><i class="fas fa-check"></i></span>
                                     Sysadmin manager on health service public MSP.</li> 
                                 <li><span class="fa-li"><i class="fas fa-check"></i></span>
-                                    Worked on supervising infrastructure in 9 Hospital and 150 affiliates on Quito City.</li>
+                                    Worked on supervising infrastructure in 9 Hospitals and 150 affiliates, in Quito-Ecuador.</li>
                                 <li><span class="fa-li"><i class="fas fa-check"></i></span>
                                     Helped design and developed news services on VMware, Web Servers, Edge Security, Data Centers and Cloud Computing.</li>
                                 <li><span class="fa-li"><i class="fas fa-check"></i></span>
@@ -105,8 +105,11 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">SysAdmin</h3>
                             <div class="subheading mb-3">Fabrica Imbabura</div>
-                            <p>Sysadmin manager.
-                            Responsible for the complete infrastructure and Technical Support (Firewalls, webservers, mail servers, networking)..</p>
+                            <p>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
+                                    Sysadmin manager</li>
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
+                                    Responsible for the complete infrastructure and Technical Support (Firewalls, webservers, mail servers, networking)</li></p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2013 -  2014</span></div>
                     </div>
@@ -130,7 +133,7 @@
                             <h3 class="mb-0">Courses, Bootcamps, Degree </h3>
                             <div class="subheading mb-3">Networking,Sysadmin, DevOps, Cloud Computing </div>
                             <div> </div>
-                            <p> - Implementing a Full CI/CD Pipeline | A Cloud Guru | 2021</p>
+                            <p>  - Implementing a Full CI/CD Pipeline | A Cloud Guru | 2021</p>
                             <p>  - Cloud Engineering Training | Google Qwiklabs | 2021 </p>
                             <p>  - Google Professional Cloud Architect Exam Preparation | CLOUD ACADEMY | 2021 </p>
                             <p>  - Google Associate Cloud Engineer Exam Preparation | CLOUD ACADEMY | 2021  </p>
