--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                             <div class="subheading mb-3">Slope IT</div>
                             <p>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>
-                                Freelance, Consultant</li> 
-                           <li><span class="fa-li"><i class="fas fa-check"></i></span> 
-                              Responsible for the complete infrastructure and Technical Support</li> 
-                          <li><span class="fa-li"><i class="fas fa-check"></i></span>
+                              Freelance, Consultant</li> 
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span>
                               Supporting and Consultant on Design Tech Project</li>
                             <li><span class="fa-li"><i class="fas fa-check"></i></span>
-                              Building up pipelines, set up backend infrastructure on GCP and AWS to startups</li>                                         
+                              Building up pipelines, set up backend infrastructure on GCP and AWS to startups</li>  
+                            <li><span class="fa-li"><i class="fas fa-check"></i></span> 
+                                Responsible for the complete infrastructure and Technical Support</li>                                       
                                 
                            </p>
                         </div>
@@ -117,7 +117,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Tech Support</h3>
                             <div class="subheading mb-3">Saitel S.A</div>
-                            <p>Responsible for the complete infrastructure and Technical Support.</p>
+                            <p><span class="fa-li"><i class="fas fa-check"></i></span>
+                                Responsible for the complete infrastructure and Technical Support.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">2012 - 2013</span></div>
                     </div>
