--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                         <span class="text-primary">Guerrero</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Ibarra-Ecuador·
-                        <a href="mailto:christianmarcelog@gmail.com">christianmarcelog@gmail.com</a>
+                         <h3 class="mb-0">Reach me:</h3><a href="mailto:christianmarcelog@gmail.com">christianmarcelog@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Really good at solving problems, valuable experience as Sys Admin and Cloud Engineer, strong experience build up reliable infrastructure on-premises and cloud. Teamwork, Positive attitude, strong work ethic, Enjoy to teach and learn every day</p>
                     <div class="social-icons">
