--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">System Engineer</h3>
                             <div class="subheading mb-3">EPAM System</div>
-                            <p style="text-align:center;">
+                            <p style="text-align:center;"> <li><span class="fa-li"><i class="fas fa-check"></i></span>
                                 •	Develop freelance projects, including GPS tracking, web server deployment, and hardening servers on either Ubuntu or CentOS Linux
                                 •	Assisting and advising small businesses on design technology projects on-premises or in the cloud
                                 •	 Manage Cisco Network Infrastructure, VLAN Reconfiguration, and Routing
@@ -87,15 +87,23 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">SysAdmin </h3>
                             <div class="subheading mb-3">Coordinación Zonal 9 Salud – MSP </div>
-                            <p style="text-align:center;"> 
+                            <p style="text-align:center;"> <li><span class="fa-li"><i class="fas fa-check"></i></span>
                                 •	Sysadmin manager on a public health service MSP in Ecuador.
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
                                 •	Oversaw infrastructure in 9 hospitals and 150 affiliates in Quito, Ecuador.
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
                                 •	Assisting in the design, tracking, and development of new services for VMware, Web Servers, Edge Security, Data Centers, and Cloud Computing.
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
                                 •	Create and implement an ISO 27001 project for hospitals and health units with the goal of closing security gaps.
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
                                 •	Develop and implement a data and disaster recovery project for all hospitals and units.
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
                                 •	Migrated infrastructure on-premises VM instances on VMware (Web Page, Own Cloud) to GCP Compute Engine in the cloud.
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
                                 •	Managed the company's infrastructure (firewalls, web servers, mail servers, networking) and worked with brands such as VMware, Fortinet, GNU/Linux, and Windows Server.
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
                                 •	In charge of all on-premises data backups (Bash).
+                                <li><span class="fa-li"><i class="fas fa-check"></i></span>
                                 •	Technical support, Linux troubleshooting, and Open-Source projects (Mail Servers, File Servers, Webhosting).
                                 </p>
                         </div>
@@ -105,7 +113,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">DevOps, Cloud Engineer Consultant</h3>
                             <div class="subheading mb-3">Slope IT</div>
-                            <p style="text-align:center;">                               
+                            <p style="text-align:left;"> <li><span class="fa-li"><i class="fas fa-check"></i></span>                             
                                 •	Develop freelance projects, including GPS tracking, web server deployment, and hardening servers on either Ubuntu or CentOS Linux
                                 •	Assisting and advising small businesses on design technology projects on-premises or in the cloud
                                 •	Manage Cisco Network Infrastructure, VLAN Reconfiguration, and Routing
